[gd_scene load_steps=14 format=3 uid="uid://cewaah215cyps"]

[ext_resource type="Texture2D" uid="uid://ccx8c4viomrat" path="res://assets/timing-bar.png" id="1_jtskx"]
[ext_resource type="Script" uid="uid://rlk2ymjay270" path="res://scripts/minigame.gd" id="1_rkd12"]
[ext_resource type="Texture2D" uid="uid://clfq4syn3qfpk" path="res://assets/arrow.png" id="2_th6so"]
[ext_resource type="Script" uid="uid://bemllm7ycgdfc" path="res://scripts/arrow.gd" id="3_67spw"]
[ext_resource type="FontFile" uid="uid://dsqwije2j027h" path="res://assets/Other/Peaberry Base/Peaberry-Base.otf" id="6_by3sa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ufwu"]
region = Rect2(0, 0, 86, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm1by"]
region = Rect2(86, 0, 86, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6b4y"]
region = Rect2(172, 0, 86, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpqm4"]
region = Rect2(258, 0, 86, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h8k3"]
region = Rect2(344, 0, 86, 74)

[sub_resource type="SpriteFrames" id="SpriteFrames_oekce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ufwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm1by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6b4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpqm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h8k3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_of4w3"]
size = Vector2(159, 76.5)

[sub_resource type="Curve2D" id="Curve2D_5h7gb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -34, -7, 0, 0, 0, 0, 35, -7)
}
point_count = 2

[node name="Cauldron" type="Area2D"]
show_behind_parent = true
collision_mask = 3
script = ExtResource("1_rkd12")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 50)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_oekce")
autoplay = "default"
frame_progress = 0.0472162

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 53)
shape = SubResource("RectangleShape2D_of4w3")

[node name="Bar" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2)
texture = ExtResource("1_jtskx")

[node name="Path2D" type="Path2D" parent="Bar"]
scale = Vector2(0.4, 0.5)
curve = SubResource("Curve2D_5h7gb")

[node name="PathFollow2D" type="PathFollow2D" parent="Bar/Path2D"]
position = Vector2(-34, -7)
script = ExtResource("3_67spw")

[node name="Arrow" type="Sprite2D" parent="Bar/Path2D/PathFollow2D"]
position = Vector2(-8, -15)
texture = ExtResource("2_th6so")
centered = false

[node name="ScoreLabel" type="Label" parent="."]
offset_left = -71.0
offset_top = -56.0
offset_right = 72.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_by3sa")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
